syntax = "proto3";

package astria.mempool.v1alpha1;

// A request to submit a transaction directly to the Astria Sequencer's mempool.
message SubmitTransactionRequest {
  // The transaction to be submitted.
  bytes transaction = 1;
}
