syntax = "proto3";

package astria.mempool.v1alpha1;

import "astria/mempool/v1alpha1/transaction_status.proto";

// A response to a request to submit a transaction to the Astria Sequencer's mempool,
// containing the status of the transaction in the mempool.
message SubmitTransactionResponse {
  // The status of the transaction submitted to the mempool.
  TransactionStatus status = 1;
}
